cabal-version: 3.0

name: cloud
version: 0

common base
    default-language: Haskell2010
    build-depends: aeson, aeson-optics, aeson-pretty, base, bytestring, http-conduit, http-types, optics, process, relude, text, time, unordered-containers
    default-extensions: NoImplicitPrelude OverloadedStrings

executable deploy
    import: base
    main-is: deploy.hs

executable update
    import: base
    main-is: update.hs

executable format
    import: base
    main-is: format.hs
    build-depends: ormolu
